[package]
name = "trading-types"
version = "0.1.0"
repository = "https://github.com/nordborn/trading-types-rs"
edition = "2021"
license = "MIT"
authors = ["Nordborn"]
description = "trading-types provides type definitions (and some utils) as building blocks for type-safe trading"

[dependencies]
chrono = { version = "0.4", features = ["serde"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["raw_value"] }
thiserror = "1.0"
sqlx = "0.8"